adding bacon theme in header.html

--- a/header.html
+++ b/header.html
@@ -1,7 +1,10 @@
 <template name="header">
     <header>
-      <h1><i class="fa fa-paper-plane"></i> StoryPost</h1>
-      <h2>Tell your story to the world.  Anonymously.</h2>
+      <h1><i class="fa fa-paper-plane"></i> BaconPost</h1>
+      <h2>Show Your Bacon to the World.  Anonymously.</h2>
+        <img id="bacon" src="/images/bacon-icon.png" />
+      <small>One Bacon A Day, Keep the Doctors Away.
+      </small>
 
       <nav>
           <a href="{{pathFor 'home'}}">Home</a>
