--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>StoryPost - Tell Your Story to the World</title>
+  <title>BaconPost - Show Your Bacon to the World</title>
   <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 
