baconated some content

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <footer>
 
       <p>
-        Cake is hungry for rainbow. Booya.
+        Cake is hungry for rainbow. Booya. Made by <a href="http://shinshinwu.github.io" target="_blank">Anna</a>
       </p>
 
    </footer>
