--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <template name="contact">
-  <p>Authentic photo booth iPhone, Banksy post-ironic organic flexitarian freegan selvage swag Neutra Bushwick fashion axe. Banjo pickled post-ironic, readymade distillery wolf aesthetic small batch leggings.</p>
-
-  <p>Ugh Vice pour-over mixtape, meh listicle next level fap gluten-free Portland sriracha beard church-key. Plaid polaroid authentic hoodie, synth Tumblr chia. Aesthetic normcore heirloom, keytar try-hard pop-up asymmetrical farm-to-table tousled PBR cray occupy authentic pickled. Yr semiotics mumblecore, DIY you probably haven't heard of them skateboard cardigan cronut readymade narwhal fashion axe. Sustainable try-hard synth mlkshk ugh Pinterest 3 wolf moon chia, swag trust fund gastropub XOXO banh mi whatever.</p>
+  <p>Cure some bacon with <a href="http://shinshinwu.github.io" target="_blank">me</a>.
+  <br>
+  <img src="http://i.giphy.com/RyFJnOMPBr13G.gif" /></p>
 </template>
